# GraphQLer

./: pyproject.toml
graphqler/fuzzer/: fuzzer.py
graphqler/fuzzer/engine/detectors/field_suggestion/: field_suggestion_materializer.py
graphqler/fuzzer/engine/detectors/html_injection/: html_injection_detector.py
graphqler/fuzzer/engine/detectors/introspection/: introspection_materializer.py
graphqler/fuzzer/engine/detectors/os_command_injection/: os_command_injection_materializer.py
graphqler/fuzzer/engine/detectors/path_injection/: path_injection_detector.py
graphqler/fuzzer/engine/detectors/query_deny_bypass/: query_deny_bypass_detector.py
graphqler/fuzzer/engine/detectors/sql_injection/: sql_injection_detector.py
graphqler/fuzzer/engine/detectors/ssrf_injection/: ssrf_injection_materialilzer.py
graphqler/fuzzer/engine/detectors/xss_injection/: xss_injection_materializer.py
graphqler/fuzzer/engine/materializers/: injection_materializer.py
